--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/helloSheridanText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_sheridan"
@@ -15,5 +16,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/clickMeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/click_me"
+        app:layout_constraintEnd_toEndOf="@+id/helloSheridanText"
+        app:layout_constraintStart_toStartOf="@+id/helloSheridanText"
+        app:layout_constraintTop_toBottomOf="@+id/helloSheridanText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
